@@ -13,10 +13,9 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
-import java.util.function.BiFunction;
 import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import net.minecraft.block.Block;
 import net.minecraft.data.DataGenerator;
 import net.minecraft.data.DataProvider;
@@ -34,15 +33,16 @@ import org.slf4j.Logger;
 public class ModelProvider
 implements DataProvider {
     private static final Logger LOGGER = LogUtils.getLogger();
-    private final DataGenerator generator;
+    private final DataGenerator.PathResolver blockstatesPathResolver;
+    private final DataGenerator.PathResolver modelsPathResolver;
 
     public ModelProvider(DataGenerator generator) {
-        this.generator = generator;
+        this.blockstatesPathResolver = generator.createPathResolver(DataGenerator.OutputType.RESOURCE_PACK, "blockstates");
+        this.modelsPathResolver = generator.createPathResolver(DataGenerator.OutputType.RESOURCE_PACK, "models");
     }
 
     @Override
     public void run(DataWriter cache) {
-        Path path = this.generator.getOutput();
         HashMap map = Maps.newHashMap();
         Consumer<BlockStateSupplier> consumer = blockStateSupplier -> {
             Block block = blockStateSupplier.getBlock();
@@ -62,7 +62,7 @@ implements DataProvider {
         Consumer<Item> consumer2 = set::add;
         new BlockStateModelGenerator(consumer, biConsumer, consumer2).register();
         new ItemModelGenerator(biConsumer).register();
-        List list = Registry.BLOCK.stream().filter(block -> !map.containsKey(block)).collect(Collectors.toList());
+        List<Block> list = Registry.BLOCK.stream().filter(block -> !map.containsKey(block)).toList();
         if (!list.isEmpty()) {
             throw new IllegalStateException("Missing blockstate definitions for: " + list);
         }
@@ -78,28 +78,19 @@ implements DataProvider {
                 }
             }
         });
-        this.writeJsons(cache, path, map, ModelProvider::getBlockStateJsonPath);
-        this.writeJsons(cache, path, map2, ModelProvider::getModelJsonPath);
+        this.writeJsons(cache, map, block -> this.blockstatesPathResolver.resolveJson(block.getRegistryEntry().registryKey().getValue()));
+        this.writeJsons(cache, map2, this.modelsPathResolver::resolveJson);
     }
 
-    private <T> void writeJsons(DataWriter cache, Path root, Map<T, ? extends Supplier<JsonElement>> jsons, BiFunction<Path, T, Path> locator) {
-        jsons.forEach((object, supplier) -> {
-            Path path2 = (Path)locator.apply(root, object);
+    private <T> void writeJsons(DataWriter cache, Map<T, ? extends Supplier<JsonElement>> map, Function<T, Path> function) {
+        map.forEach((object, supplier) -> {
+            Path path = (Path)function.apply(object);
             try {
-                DataProvider.writeToPath(cache, (JsonElement)supplier.get(), path2);
+                DataProvider.writeToPath(cache, (JsonElement)supplier.get(), path);
             } catch (Exception exception) {
-                LOGGER.error("Couldn't save {}", (Object)path2, (Object)exception);
+                LOGGER.error("Couldn't save {}", (Object)path, (Object)exception);
             }
         });
-    }
-
-    private static Path getBlockStateJsonPath(Path root, Block block) {
-        Identifier identifier = Registry.BLOCK.getId(block);
-        return root.resolve("assets/" + identifier.getNamespace() + "/blockstates/" + identifier.getPath() + ".json");
-    }
-
-    private static Path getModelJsonPath(Path root, Identifier id) {
-        return root.resolve("assets/" + id.getNamespace() + "/models/" + id.getPath() + ".json");
     }
 
     @Override
